@@ -7,6 +7,12 @@ An overview of the relevant changes in new, and older, releases.
 Version 2.3a0
 -------------
 
+- The PyObjC egg now includes the header files that should be used to
+  compile to compile the extensions in the framework wrappers, which makes
+  it a lot easier to access those headers.
+
+- BUGFIX: The definition for Py_ARG_SIZE_T was incorrect, which causes
+  problems in 64-bit code.
 
 - Initial port to Python 3.x
 
